docs: Update README with usage, options, and performance info
Expand README with installation instructions, usage examples,
supported options, performance benchmarks, and design notes. Clarify
supported JDK version and add SIMD section.